added task analytics endpoint
